err/tweetfs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TweetFS-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tweetfs'...
Compiling './lib/python3.5/site-packages/tweetfs/hide.py'...
***   File "./lib/python3.5/site-packages/tweetfs/hide.py", line 21
    print 'loading cached language model from %s...' % self.model_filename,
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tweetfs/pack.py'...
***   File "./lib/python3.5/site-packages/tweetfs/pack.py", line 14
    print 'serialized payload for twitter: %s bytes' % len(s)
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweetfs/payload.py'...
***   File "./lib/python3.5/site-packages/tweetfs/payload.py", line 39
    print 'entering: %s' % basedir
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tweetfs/test.py'...
***   File "./lib/python3.5/site-packages/tweetfs/test.py", line 57
    print 'TEST 1: PASSED'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tweetfs/tweetfs.py'...
***   File "./lib/python3.5/site-packages/tweetfs/tweetfs.py", line 14
    print 'mode: upload'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tweetfs/unpack.py'...
***   File "./lib/python3.5/site-packages/tweetfs/unpack.py", line 21
    print 'serialized payload from twitter: %s bytes' % len(s)
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tweetfs/x.py'...
***   File "./lib/python3.5/site-packages/tweetfs/x.py", line 6
    print 'src: %s' % src
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
